add fabric api events and more wip porting